# flash-attention

csrc/: CMakeLists.txt
csrc/flash_attn/: CMakeLists.txt
